# MiniTikTok-Auth

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yaml
Auth/: Cargo.toml  build.rs
Auth/src/: auth_service.rs  combind_incoming.rs  lib.rs  main.rs  proto.rs
Auth/tests/: auth_test.rs
manifests-dev/: configmap.yaml  deployment.yaml  service-minitiktok-auth-grpc.yaml  service.yaml
