[package]
name = "mini_tiktok_auth"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0", default-features = false, features = ["auto-color", "color", "humantime"] }
log = { version = "0", default-features = false }
prost = { version = "0", default-features = false }
redis = { version = "0", default-features = false, features = ["tokio-comp", "aio"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
bb8-bolt = { version = "0", default-features = false }
tonic = { version = "0", default-features = false, features = ["transport", "codegen", "prost"] }
uuid = { version = "1", default-features = false, features = ["v4", "std"] }
tonic-health = { version = "0", default-features = false, features = ["transport"] }
argon2 = { version = "0", features = ["std"] }

[build-dependencies]
tonic-build = "0"
